<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ly_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/text_white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_tab_menu_survey"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_survey"
                    style="@style/tab_menu_text"
                    android:text="@string/title_survey" />

                <net.nineoneww.mobile.view.IconFontTextView
                    android:id="@+id/tab_menu_survey_fontIcon"
                    style="@style/tab_menu_fontIcon"
                    android:layout_above="@+id/tab_menu_survey"
                    app:fontFile="@string/font_file"
                    app:value="@string/icon_survey" />

                <TextView
                    android:id="@+id/tab_menu_survey_num"
                    style="@style/tab_menu_bgnum"
                    android:layout_toRightOf="@+id/tab_menu_survey"
                    android:text="99+"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_vote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_vote"
                    style="@style/tab_menu_text"
                    android:text="@string/title_vote" />

                <net.nineoneww.mobile.view.IconFontTextView
                    android:id="@+id/tab_menu_vote_fontIcon"
                    style="@style/tab_menu_fontIcon"
                    android:layout_above="@+id/tab_menu_vote"
                    app:fontFile="@string/font_file"
                    app:value="@string/icon_vote" />

                <TextView
                    android:id="@+id/tab_menu_vote_num"
                    style="@style/tab_menu_bgnum"
                    android:layout_toRightOf="@+id/tab_menu_vote"
                    android:text="99+"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_promotion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_promotion"
                    style="@style/tab_menu_text"
                    android:text="@string/title_promotion" />

                <net.nineoneww.mobile.view.IconFontTextView
                    android:id="@+id/tab_menu_promotion_fontIcon"
                    style="@style/tab_menu_fontIcon"
                    android:layout_above="@+id/tab_menu_promotion"
                    app:fontFile="@string/font_file"
                    app:value="@string/icon_promotion" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_exchange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_exchange"
                    style="@style/tab_menu_text"
                    android:text="@string/title_exchange" />

                <net.nineoneww.mobile.view.IconFontTextView
                    android:id="@+id/tab_menu_exchange_fontIcon"
                    style="@style/tab_menu_fontIcon"
                    android:layout_above="@+id/tab_menu_exchange"
                    app:fontFile="@string/font_file"
                    app:value="@string/icon_exchange" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab_menu_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tab_menu_user"
                    style="@style/tab_menu_text"
                    android:text="@string/title_user" />

                <net.nineoneww.mobile.view.IconFontTextView
                    android:id="@+id/tab_menu_user_fontIcon"
                    style="@style/tab_menu_fontIcon"
                    android:layout_above="@+id/tab_menu_user"
                    app:fontFile="@string/font_file"
                    app:value="@string/icon_user" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/ly_tab_menu"
        android:background="@color/text_gray" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/ly_top_bar"/>
</RelativeLayout>